--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,20 +11,21 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@sentry/nextjs": "^10.22.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
-    "@vercel/analytics": "^1.5.0",
+    "@vercel/analytics": "1.5.0",
+    "@vercel/kv": "^1.0.1",
     "@vercel/speed-insights": "^1.2.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.263.1",
+    "framer-motion": "12.23.24",
+    "lucide-react": "0.263.1",
     "next": "14.2.10",
     "next-themes": "^0.4.6",
     "openai": "^6.7.0",
@@ -33,11 +34,11 @@
     "react-dropzone": "^14.3.8",
     "recharts": "^3.3.0",
     "resend": "^3.3.0",
-    "@vercel/kv": "^1.0.1",
     "styled-jsx": "^5.1.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
