docs: add Converto Enterprise Blueprint and ML Ops Suite documentation
- Add CONVERTO_ENTERPRISE_BLUEPRINT.md: complete development pipeline (Day 1-15), ROI calculations, spin-off products, multi-brand applicability
- Add docs/ML_OPS_SUITE_README.md: commercializable spin-off products (Auto-Tuning Engine, Cost Guardian, Predictive Core, etc.)
- Update README.md: add Enterprise & Architecture documentation section
- Update .gitignore: allow CONVERTO_ENTERPRISE_BLUEPRINT.md and docs/ directory

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 !mcp_*.json
 !AUTO_DEPLOY_MCP_GUIDE.md
 !test_mcp_*.sh
+!CONVERTO_ENTERPRISE_BLUEPRINT.md
+!docs/
+!docs/**
 
 # allow code dirs
 !backend/
