fix: add Supabase SSR files to gitignore exceptions
- Add frontend/lib/, frontend/hooks/, frontend/types/ to allowed paths
- Add frontend/middleware.ts to allowed files
- Supabase SSR integration files now tracked in git

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,13 @@
 !frontend/
 !frontend/app/
 !frontend/app/**
+!frontend/lib/
+!frontend/lib/**
+!frontend/hooks/
+!frontend/hooks/**
+!frontend/types/
+!frontend/types/**
+!frontend/middleware.ts
 !scripts/
 !frontend/.nvmrc
 !frontend/next.config.js
