feat: add quick setup scripts and guides for priorities 1-3
- Add setup-render-env.sh script for backend environment variables
- Add setup-supabase-realtime.md guide for Realtime activation
- Add QUICK_SETUP_GUIDE.md with step-by-step instructions
- Update .gitignore to allow setup scripts

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@
 !frontend/types/**
 !frontend/middleware.ts
 !scripts/
+!scripts/**
+!QUICK_SETUP_GUIDE.md
 !frontend/.nvmrc
 !frontend/next.config.js
 !frontend/Dockerfile
