chore: allow new markdown docs in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 !AUTO_DEPLOY_MCP_GUIDE.md
 !test_mcp_*.sh
 !CONVERTO_ENTERPRISE_BLUEPRINT.md
+!IMPLEMENTATION_COMPLETE.md
+!SETUP_NOW.md
+!PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
 
