docs: add NEXT_STEPS_NOW.md with immediate action items
- Highlight backend build failure that needs fixing first
- Prioritized action list (0-6)
- Clear time estimates and links to all guides
- Update .gitignore to allow NEXT_STEPS_NOW.md

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 !CONVERTO_ENTERPRISE_BLUEPRINT.md
 !IMPLEMENTATION_COMPLETE.md
 !SETUP_NOW.md
+!NEXT_STEPS_NOW.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
