fix: remove typo from render.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 !IMPLEMENTATION_COMPLETE.md
 !SETUP_NOW.md
 !NEXT_STEPS_NOW.md
+!DASHBOARD_FIX_GUIDE.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
