docs: add completed tasks summary and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 !SETUP_NOW.md
 !NEXT_STEPS_NOW.md
 !DASHBOARD_FIX_GUIDE.md
+!COMPLETED_TASKS_SUMMARY.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
