docs: add QUICK_START and FINAL_CHECKLIST, update README
- Add QUICK_START.md with 3-step quick setup guide (~15 min)
- Add FINAL_CHECKLIST.md with complete production launch checklist
- Update README.md with new quick start link
- Update .gitignore to allow new docs

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,8 @@
 !NEXT_STEPS_NOW.md
 !DASHBOARD_FIX_GUIDE.md
 !COMPLETED_TASKS_SUMMARY.md
+!FINAL_CHECKLIST.md
+!QUICK_START.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
