--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 !COMPLETED_TASKS_SUMMARY.md
 !FINAL_CHECKLIST.md
 !QUICK_START.md
+!PROJECT_COMPLETE_SUMMARY.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
