docs: add START_HERE.md as main entry point
- Create START_HERE.md as entry point for new users
- Quick navigation to all key documents
- Update README with START_HERE link at top
- Easy onboarding flow

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 !COMPLETED_TASKS_SUMMARY.md
 !FINAL_CHECKLIST.md
 !QUICK_START.md
+!START_HERE.md
 !PROJECT_COMPLETE_SUMMARY.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
