docs: add 1000-word market success story (MARKKINAT_MENESTYS.md)
- Comprehensive market positioning text in Finnish (~1095 words)
- Explains why Converto Business OS is a market success
- Covers: problem, solution, market potential, competitive advantages
- Includes ROI calculations and future vision
- Professional marketing content for investors and customers
- Update .gitignore to allow MARKKINAT_MENESTYS.md

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 !QUICK_START.md
 !START_HERE.md
 !PROJECT_COMPLETE_SUMMARY.md
+!MARKKINAT_MENESTYS.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
