--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 !START_HERE.md
 !PROJECT_COMPLETE_SUMMARY.md
 !MARKKINAT_MENESTYS.md
+!TEKNISET_OMINAISUUDET.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
