docs: comprehensive technical documentation with all 10 improvements
- TEKNISET_OMINAISUUDET.md: Added architecture diagram, decision rationale, compliance table, versions, core vs planned separation, API endpoints structure, performance benchmarks, documentation links, summary table
- DEVELOPER_ARCHITECTURE.md: Complete developer architecture document for CTOs and architects
- AI_ORCHESTRATOR.md: AI backend orchestrator documentation with pipeline flow
- All documents include: architecture context, decision rationale, compliance details, versions, API endpoints, performance metrics, and links
- Fixed typo corrections

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@
 !PROJECT_COMPLETE_SUMMARY.md
 !MARKKINAT_MENESTYS.md
 !TEKNISET_OMINAISUUDET.md
+!DEVELOPER_ARCHITECTURE.md
+!AI_ORCHESTRATOR.md
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
