--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.115.0
 uvicorn>=0.32.0
 sqlalchemy>=2.0.0
 psycopg[binary]>=3.1.0
+psycopg2-binary>=2.9.9
 pydantic>=2.9.0
 pydantic-settings>=2.0.0
 APScheduler>=3.10.0
