fix: add frontend/components to Git - Render build fails because components are ignored

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@
 !frontend/app/**
 !frontend/lib/
 !frontend/lib/**
+!frontend/components/
+!frontend/components/**
 !frontend/hooks/
 !frontend/hooks/**
 !frontend/types/
