--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.3.8",
+    "reactflow": "^11.11.4",
     "recharts": "^3.3.0",
     "resend": "^3.3.0",
     "styled-jsx": "^5.1.7",
