fix: resolve linter errors in dashboard and OpenAI optimizer
- Fix merchant_name → vendor property mismatch in dashboard CSV export
- Fix OpenAI optimizer constructor type errors and missing error handling
- Add proper type definitions for BatchRequest priority
- Remove duplicate configuration assignments
- Disable missing AI autofix hook in pre-commit config
- Production-ready code quality improvements

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,11 +33,11 @@ repos:
         additional_dependencies: ["pydantic>=2.5.0"]
 
   # Optional AI autofix (runs only if OPENAI_API_KEY is set)
-  - repo: local
-    hooks:
-      - id: ai-autofix
-        name: AI Autofix (OpenAI)
-        entry: python scripts/ai_autofix.py
-        language: system
-        pass_filenames: true
-        stages: [pre-commit]
+  # - repo: local
+  #   hooks:
+  #     - id: ai-autofix
+  #       name: AI Autofix (OpenAI)
+  #       entry: python scripts/ai_autofix.py
+  #       language: system
+  #       pass_filenames: true
+  #       stages: [pre-commit]
