feat: implement Modular Business OS Core v1.0
- Docker Compose: Supabase + Redis + Grafana stack
- Complete Supabase schema with 8 tables
- Module Registry: 6 pre-built modules
- Event Bus: async broadcasting
- RBAC: 4 roles with permission matrix
- Marketplace & Events API
- Production-ready SaaS foundation

Enterprise-ready, ROI optimized

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@
 !PRIORITIES_4-7_IMPLEMENTATION.md
 !docs/
 !docs/**
+!docker-compose.modular-core.yml
+!supabase/
+!supabase/**
 
 # allow code dirs
 !backend/
