--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@
 !frontend/Dockerfile
 !frontend/tsconfig.json
 !frontend/vercel.json
+!frontend/package.json
 !app/static/
 
 # inside allowed dirs, re-ignore heavy junk
