fix: Add frontend/data/blog/posts.json to Git repo - required for Vercel deployment

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@
 !frontend/
 !frontend/app/
 !frontend/app/**
+!frontend/data/
+!frontend/data/**
 !frontend/lib/
 !frontend/lib/**
 !frontend/components/
