--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "@vercel/kv": "^1.0.1",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "framer-motion": "12.23.24",
     "lucide-react": "0.263.1",
