--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,62 +6,56 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next build && next export",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "eslint",
-    "type-check": "tsc --noEmit",
-    "deploy": "vercel --prod --yes",
-    "deploy:check": "npm run build && vercel --prod --yes",
-    "deploy:help": "echo 'Deploy commands:\\n  npm run deploy - Quick deploy\\n  npm run deploy:check - Build + deploy\\n  ./scripts/vercel-fix-and-deploy.sh - Full auto-fix + deploy'"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.1.5",
-    "@react-email/components": "^0.5.7",
-    "@react-email/tailwind": "^1.2.2",
     "@sentry/nextjs": "^10.22.0",
-    "@stripe/stripe-js": "^8.2.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.45.4",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^9.0.8",
     "@vercel/analytics": "1.5.0",
     "@vercel/kv": "^1.0.1",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "0.7.1",
-    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
+    "express": "^4.18.2",
     "framer-motion": "12.23.24",
     "lucide-react": "0.263.1",
-    "next": "^14.2.33",
+    "next": "14.2.10",
     "next-themes": "^0.4.6",
     "openai": "^6.7.0",
-    "posthog-js": "^1.284.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.3.8",
     "reactflow": "^11.11.4",
     "recharts": "^3.3.0",
     "resend": "^3.3.0",
-    "stripe": "^19.2.0",
+    "sonner": "^1.4.0",
     "styled-jsx": "^5.1.7",
     "swr": "^2.3.6",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "1.0.7",
-    "uuid": "^13.0.0",
-    "zod": "^4.1.12"
+    "typescript": "^5.6.3",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.3.8",
-    "@types/react-dom": "^18.3.0",
-    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.10",
-    "postcss": "^8.5.6",
-    "typescript": "^5.6.3"
+    "postcss": "^8.5.6"
   }
 }
