fix: correct function paths in vercel.json for rootDirectory

--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,10 @@
   "rootDirectory": "frontend",
   "regions": ["iad1"],
   "functions": {
-    "frontend/app/api/**/*.ts": {
+    "app/api/**/*.ts": {
       "maxDuration": 30
     },
-    "frontend/app/api/ocr/**/*.ts": {
+    "app/api/ocr/**/*.ts": {
       "maxDuration": 60
     }
   },
