🚀 Complete DocFlow marketing website implementation
✅ Features implemented:
- Complete DocFlow branding and Finnish content
- Landing page with StoryBrand messaging
- Marketing pages: pricing, integrations, security, contact, demo, signup
- Legal pages: privacy policy, DPA
- Interactive ROI calculator
- Reusable UI components (Button, Card)
- Enhanced APIs for contact and signup forms

🔧 Vercel Pro optimization:
- Production-ready vercel.json with redirects and security headers
- Next.js config with i18n and optimizations
- Middleware for www→apex canonicalization and preview noindex
- Updated sitemap and robots.txt for SEO
- Health check endpoint and Stripe webhook stub
- DNS setup documentation

🏗️ Architecture:
- Archived premium content to _archived/
- Modern responsive design with Tailwind CSS
- GDPR-compliant privacy policy and DPA
- Finnish language support throughout
- SEO optimized with DocFlow keywords

Ready for production deployment to Vercel Pro!

--- a/apps/marketing/tsconfig.json
+++ b/apps/marketing/tsconfig.json
@@ -7,8 +7,8 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/": ["./"],
-      "@content/": ["./content/"]
+      "@/*": ["./*"],
+      "@content/*": ["./content/*"]
     },
     "lib": [
       "dom",
