--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,8 @@
     "react-dropzone": "^14.3.8",
     "reactflow": "^11.11.4",
     "recharts": "^3.3.0",
-    "resend": "^3.3.0",
+    "resend": "^3.5.0",
+    "stripe": "^19.2.0",
     "styled-jsx": "^5.1.7",
     "swr": "^2.3.6",
     "tailwind-merge": "^2.0.0",
