--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf .next"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "@sentry/nextjs": "^10.22.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4.1.16",
@@ -20,6 +21,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "next": "14.2.5",
+    "resend": "^3.5.0",
+    "posthog-js": "^1.203.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwindcss": "^4.1.16"
