--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,15 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1",
-    "styled-jsx": "^5.1.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "next": "15.1.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "15.1.3"
   }
 }
