--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint . --max-warnings=0",
+    "format:check": "prettier --check .",
+    "typecheck": "tsc --noEmit",
+    "e2e": "playwright test",
+    "openapi:lint": "spectral lint docs/openapi.yaml -r .spectral.yaml",
+    "openapi:lint:report": "spectral lint docs/openapi.yaml -r .spectral.yaml -f json > openapi-lint-report.json || true"
   },
   "dependencies": {
+    "jsonwebtoken": "^9.0.2",
+    "next": "15.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "15.1.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.0",
+    "@sentry/nextjs": "^8.27.0",
+    "@stoplight/spectral-cli": "^6.11.1",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.3.8",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.3"
+    "eslint-config-next": "15.1.3",
+    "msw": "^2.12.1",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^4",
+    "typescript": "^5.6.3"
   }
 }
