--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -4,8 +4,35 @@
   "buildCommand": "npm run build",
   "redirects": [
     {
+      "source": "/",
+      "has": [
+        {
+          "type": "header",
+          "key": "Accept-Language",
+          "value": "fi.*"
+        }
+      ],
+      "destination": "/fi",
+      "permanent": false
+    },
+    {
+      "source": "/",
+      "destination": "/fi",
+      "permanent": false
+    },
+    {
+      "source": "/signup",
+      "destination": "/fi/contact",
+      "permanent": false
+    },
+    {
       "source": "/demo",
       "destination": "https://calendly.com/converto",
+      "permanent": false
+    },
+    {
+      "source": "/blog",
+      "destination": "/fi/blog",
       "permanent": false
     }
   ],
@@ -36,7 +63,7 @@
       ]
     },
     {
-      "source": "/:path*\\.(css|js|woff2?|ttf|otf|eot)",
+      "source": "/_next/static/:path*",
       "headers": [
         { 
           "key": "Cache-Control", 
