Resolve Git conflicts: Remove Express backend duplicate, fix dependencies, clean build artifacts
- Removed duplicate Express backend (index.js, package.json, routes/*.js)
- Kept FastAPI backend with proper Supabase auth integration
- Fixed requirements.txt: removed conflicting psycopg2-binary
- Updated .gitignore to include apps/ and backend/ build artifacts
- Cleaned duplicate auth.py files in backend/routes/
- All changes maintain existing functionality and deployment compatibility

Resolved multiple parallel backend implementations causing confusion.

--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,13 @@ app/**/.venv/
 app/**/__pycache__/
 app/**/dist/
 app/**/build/
+apps/**/node_modules/
+apps/**/.turbo/
+apps/**/.next/
+apps/**/dist/
+apps/**/build/
+backend/**/node_modules/
+backend/**/__pycache__/
 frontend/**/node_modules/
 frontend/**/.turbo/
 frontend/**/.next/
