--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ fastapi>=0.115.0
 uvicorn>=0.32.0
 sqlalchemy>=2.0.0
 psycopg[binary]>=3.1.0
-psycopg2-binary>=2.9.9
 pydantic>=2.9.0
 pydantic-settings>=2.0.0
 APScheduler>=3.10.0
@@ -17,6 +16,7 @@ openai>=1.40.0
 stripe>=10.0.0
 pyyaml>=6.0.0
 pyjwt
+passlib>=1.7.4
 python-multipart>=0.0.9
 feedparser>=6.0.11
 pyotp>=2.9.0
