--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
-  "buildCommand": "npm run build",
-  "devCommand": "npm run dev",
-  "installCommand": "npm install",
+  "buildCommand": "cd frontend && npm run build",
+  "devCommand": "cd frontend && npm run dev",
+  "installCommand": "cd frontend && npm install",
   "framework": "nextjs",
-  "outputDirectory": ".next",
-  "rootDirectory": "frontend",
+  "outputDirectory": "frontend/.next",
   "regions": ["fra1"]
 }
 
