--- a/package.json
+++ b/package.json
@@ -1,43 +1,16 @@
 {
-  "name": "docflow-resend-integration",
+  "name": "docflow-monorepo",
   "version": "1.0.0",
-  "description": "DocFlow Resend email integration with monitoring and alerting",
+  "private": true,
   "scripts": {
-    "test": "echo '🧪 Running DocFlow Resend integration tests...' && node test-resend-integration.js",
-    "test:webhook": "echo '🔗 Testing webhook events...' && bash scripts/webhook_test_commands.sh",
-    "test:email": "echo '📧 Testing email sending...' && curl -H 'Authorization: Bearer $RESEND_API_KEY' https://api.resend.com/domains",
-    "rotate:key": "echo '🔐 API Key Rotation Procedure:' && echo '1. Create new key in Resend dashboard' && echo '2. Export new key: export RESEND_API_KEY=\"re_new_key\"' && echo '3. Update .env files' && echo '4. Delete old key' && echo '5. Redeploy application'",
-    "verify:webhook": "echo '🔗 Webhook Verification:' && echo '1. Webhook URL: https://docflow.fi/api/resend/webhook' && echo '2. Secret: prod_webhook_secret_2025' && echo '3. Events: delivered, bounced, complained, opened, clicked' && echo '4. Testing signature validation...'",
-    "verify:monitoring": "echo '📊 Monitoring Thresholds:' && echo '- P95 Latency: <1s target' && echo '- Delivery Rate: ≥98% target' && echo '- Bounce Rate: <2% threshold' && echo '- Complaint Rate: <0.1% threshold' && echo '- Weekly Reports: Automated'",
-    "smoke:send": "echo '💨 Smoke Test - Sending test email...' && RESEND_API_KEY=\"$RESEND_API_KEY\" node -e \"const { Resend } = require('resend'); const resend = new Resend(process.env.RESEND_API_KEY); resend.emails.send({from: 'noreply@docflow.fi', to: 'test@example.com', subject: 'Production Smoke Test', html: '<h1>✅ Production Ready!</h1><p>This email confirms the DocFlow Resend integration is working.</p>'}).then(console.log).catch(console.error);\"",
-    "deploy:check": "echo '🚀 Production Deployment Checklist:' && echo '1. ✅ API key rotated' && echo '2. ✅ Webhook configured' && echo '3. ✅ Monitoring active' && echo '4. ✅ Domain verified' && echo '5. ✅ Ready for production'",
-    "test:all": "npm run test && npm run verify:webhook && npm run verify:monitoring",
-    "smoke:test": "npm run smoke:send && echo '✅ Smoke test email sent'",
-    "webhook:test:delivered": "curl -X POST https://docflow.fi/api/resend/webhook -H 'Content-Type: application/json' -H 'resend-signature: sha256=test_signature' -d '{\"type\": \"email.delivered\", \"data\": {\"id\": \"smoke_test_delivered\", \"to\": \"test@example.com\", \"subject\": \"Test Delivered Email\"}}'",
-    "webhook:test:bounced": "curl -X POST https://docflow.fi/api/resend/webhook -H 'Content-Type: application/json' -H 'resend-signature: sha256=test_signature' -d '{\"type\": \"email.bounced\", \"data\": {\"id\": \"smoke_test_bounced\", \"to\": \"bounce@example.com\", \"type\": \"hard\", \"reason\": \"Test bounce\"}}'",
-    "webhook:test:complained": "curl -X POST https://docflow.fi/api/resend/webhook -H 'Content-Type: application/json' -H 'resend-signature: sha256=test_signature' -d '{\"type\": \"email.complained\", \"data\": {\"id\": \"smoke_test_complained\", \"to\": \"complaint@example.com\", \"subject\": \"Test Complained Email\"}}'",
-    "webhook:test:all": "npm run webhook:test:delivered && npm run webhook:test:bounced && npm run webhook:test:complained && echo '✅ All webhook tests completed'",
-    "production:ready": "echo '🎯 PRODUCTION READY CHECKLIST:' && echo '1. 🔐 API key rotated: ' && echo '2. 🌐 Webhook configured: https://docflow.fi/api/resend/webhook' && echo '3. 📊 Monitoring thresholds set' && echo '4. 📧 Domain verified: docflow.fi' && echo '5. 🧪 All tests passing' && echo '6. 🚀 Ready for deployment!'",
-    "health:check": "echo '💚 DocFlow Resend Health Check:' && echo '📡 API Status: ' && curl -s https://api.resend.com/domains > /dev/null && echo '✅ Connected' || echo '❌ Failed' && echo '🌐 Domain Status: ' && RESEND_API_KEY=\"$RESEND_API_KEY\" curl -s -H \"Authorization: Bearer $RESEND_API_KEY\" https://api.resend.com/domains | jq -r '.data[] | select(.name==\"docflow.fi\") | .status' && echo '🕸️ Webhook Status: Ready for deployment'"
+    "build": "cd frontend && npm run build",
+    "dev": "cd frontend && npm run dev",
+    "start": "cd frontend && npm run start",
+    "lint": "cd frontend && npm run lint"
   },
-  "devDependencies": {
-    "@types/node": "^20.0.0"
-  },
-  "dependencies": {
-    "resend": "^3.0.0",
-    "node-fetch": "^3.3.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "keywords": [
-    "resend",
-    "email",
-    "docflow",
-    "monitoring",
-    "webhooks",
-    "alerts"
-  ],
-  "author": "DocFlow Team",
-  "license": "MIT"
+  "workspaces": [
+    "frontend",
+    "backend",
+    "apps/*"
+  ]
 }
