--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "private": true,
   "scripts": {
     "build": "cd frontend && npm run build",
-    "dev": "cd frontend && npm run dev",
+    "dev": "cd frontend && npm run dev", 
     "start": "cd frontend && npm run start",
     "lint": "cd frontend && npm run lint"
+  },
+  "dependencies": {
+    "next": "15.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "workspaces": [
     "frontend",
