--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm run build",
+  "buildCommand": "cd frontend && npm ci && npm run build",
   "devCommand": "cd frontend && npm run dev",
-  "installCommand": "cd frontend && npm install",
+  "installCommand": "cd frontend && npm ci",
   "framework": "nextjs",
   "outputDirectory": "frontend/.next",
-  "regions": ["fra1"]
+  "regions": ["fra1"],
+  "env": {
+    "SKIP_ENV_VALIDATION": "true"
+  }
 }
 
