--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -7,7 +7,8 @@
   "outputDirectory": ".next",
   "regions": ["fra1"],
   "env": {
-    "SKIP_ENV_VALIDATION": "true"
+    "SKIP_ENV_VALIDATION": "true",
+    "ESLINT_NO_DEV_ERRORS": "true"
   }
 }
 
