--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
+    "lucide-react": "^0.469.0",
+    "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "15.1.3",
-    "lucide-react": "^0.469.0",
-    "@supabase/supabase-js": "^2.45.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
+    "tailwindcss": "^4",
     "typescript": "^5.6.3"
   }
 }
