--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/postcss": "^4",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.4",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "tailwindcss": "^4",
-    "typescript": "^5.6.3"
+    "typescript": "^5.9.3"
   }
 }
